2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c: 	
	* dialog.c: Removed the set_has_separator commands from
	gtk_message_dialog widgets.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c (help_about_callback): translator_credits ->
	translator-credits.

2004-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c (button_press_event): Allow for a drag on the second
	click of a double click. Fixes bug #133198.

2004-02-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c: Replaced references to g_basename. See bug
	#133176. Shouldn't affect anything really, it is in an #if 0 block
	of otherwise broken code.

2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c (restart_game): Make sure restarts aren't counted by the
	statistics.

	* sol.c: Count games that we quit without finishing as failed.

2004-01-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* statistics.c: 
	* statistics.h:	
	* sol.c: Statistics are saved and even have a gconf-notification
	so that two games can be open at once. There is an obvious race
	condition, but you have to be playing two games at once and finish
	simultaneously, for a single user this is difficult (and if there are
	multiple users on one account then the statistics are meaningless).

	* aisleriot.schemas.in: Added a statistics entry to store the
	statistics.

	* sol.c:
	* sol.h:
	* events.c:
	* statistics.c:	
	* statistics.h: Statistics are now recorded, but not saved between
	games. The game timer now doesn't start until you press a mouse
	button. You can cheat by pre-planning all your moves, but that is
	your choice.

2004-01-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* statistics.c: We now have a mechanism for storing and displaying
	the statistics. We still need to actually update them and save
	them between games though.

2004-01-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* statistics.glade: Marked some strings as not-to-be-translated