@@ -43,7 +43,8 @@ knuth-18x21.png knuth-21x25.png</default>
       <applyto>/apps/aisleriot/statistics</applyto>
       <owner>aisleriot</owner>
       <type>list</type>
-      <default></default>
+      <list_type>string</list_type>
+      <default>[]</default>
       <locale name="C">
         <short>Statistics of games played</short>
 	<long>A list of strings that come in the form of a quintuple: name, wins, total games played, best time (in seconds) and worst time (also in seconds). Unplayed games do not need to be represented.</long>
