@@ -1,3 +1,8 @@
+2004-02-18  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* aisleriot.schemas.in: Fixed up the schema so it actualy installs.
+	You need CVS intltool for this to work properly.
+
 2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* sol.c: 	
